--- a/default.conf
+++ b/default.conf
@@ -3,8 +3,8 @@ server {
     server_name  localhost;
 
     #charset koi8-r;
-    #access_log  /var/log/nginx/log/host.access.log  main;
-    error_log  /var/log/nginx/error.log;
+    access_log  /var/log/nginx/log/host.access.log  main;
+    error_log  /var/log/nginx/error1.log;
 
     location / {
         root   /usr/share/nginx/html;
