--- a/default.conf
+++ b/default.conf
@@ -15,7 +15,7 @@ server {
     location /api/ {
         rewrite ^/api/?(.*)$ /$1 break;    
         proxy_pass ${CLOUD_API_BASE_URL};
-        proxy_set_header Host $host:$server_port;
+        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
