修改页面中的文字

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-ele-project",
   "version": "1.0.0",
   "description": "vue-ele-project",
-  "author": "lidonghui",
+  "author": "zhangxiaowei",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
